--- a/templates/back/admin.html.twig
+++ b/templates/back/admin.html.twig
@@ -18,9 +18,9 @@
                 <tr>
                     <td>{{ restaurant.id }}</td>
                     <td>{{ restaurant.nom }}</td>
-                    <td><a href="{{ path('restaurant_detail_admin', {id: restaurant.id}) }}" class="btn">{{ 'restaurant.details'|trans }}</a></td>
-                    <td><a href="{{ path('update_restaurant', {id: restaurant.id}) }}" class="btn">{{ 'restaurant.update'|trans }}</a></td>
-                    <td><a href="{{ path('remove_restaurant', {id: restaurant.id}) }}" class="btn">{{ 'restaurant.remove'|trans }}</a></td>
+                    <td><a href="{{ path('restaurant_detail_admin', {slug: restaurant.slug}) }}" class="btn">{{ 'restaurant.details'|trans }}</a></td>
+                    <td><a href="{{ path('update_restaurant', {slug: restaurant.slug}) }}" class="btn">{{ 'restaurant.update'|trans }}</a></td>
+                    <td><a href="{{ path('remove_restaurant', {slug: restaurant.slug}) }}" class="btn">{{ 'restaurant.remove'|trans }}</a></td>
                 </tr>
             {% endfor %}
             </tbody>
