--- a/templates/back/admin.html.twig
+++ b/templates/back/admin.html.twig
@@ -27,5 +27,6 @@
     </table>
 
     <a href="{{ path('add_restaurant') }}" class="btn btn--add">{{ 'restaurant.add'|trans }}</a>
+    <a href="{{ path('add_type') }}" class="btn btn--add"> Ajouter un type de restaurant </a>
 </section>
 {% endblock %}
