--- a/templates/front/restaurant-detail.html.twig
+++ b/templates/front/restaurant-detail.html.twig
@@ -38,16 +38,17 @@
                 </div>
             </div>
 
-
-        <div class="plat--infos"> 
-          
-            <div class="carte"> 
+            <a href="{{ path('contact', {slug: restaurant.slug}) }}" class="btn">{{ 'restaurant.contact'|trans }}</a>
+    
+            <div class="plat--infos"> 
+                <h2> {{ 'restaurant.carte'|trans }} </h2>
+                <div class="carte"> 
                 <div class="entree"> 
                     <h3 class="title">{{ 'carte.entree'|trans }}</h3>
                     {% for entree in entrees %}
                         <div class="carte--item"> 
-                            <p>{{entree.nom}}</p>
-                            <p>{{entree.description}}</p>
+                            <p class="plat_nom">{{entree.nom}}</p>
+                            <p class="desc">{{entree.description}}</p>
                             <p>{{entree.prix|prix}}</p>
                         </div>
                     {% endfor %}
@@ -56,8 +57,8 @@
                     <h3 class="title">{{ 'carte.plat'|trans }}</h3>
                     {% for plat in plats %}
                         <div class="carte--item">
-                            <p>{{plat.nom}}</p>
-                            <p>{{plat.description}}</p>
+                            <p class="plat_nom">{{plat.nom}}</p>
+                            <p class="desc">{{plat.description}}</p>
                             <p>{{plat.prix|prix}}</p>
                         </div>
                     {% endfor %}
@@ -66,8 +67,8 @@
                     <h3 class="title">{{ 'carte.dessert'|trans }}</h3>
                     {% for dessert in desserts %}
                         <div class="carte--item">
-                            <p>{{dessert.nom}}</p>
-                            <p>{{dessert.description}}</p>
+                            <p class="plat_nom">{{dessert.nom}}</p>
+                            <p class="desc">{{dessert.description}}</p>
                             <p>{{dessert.prix|prix}}</p>
                         </div>
                     {% endfor %}
@@ -76,15 +77,14 @@
                     <h3 class="title">{{ 'carte.boisson'|trans }}</h3>
                     {% for boisson in boissons %}
                         <div class="carte--item">
-                        <p>{{boisson.nom}}</p>
-                        <p>{{boisson.description}}</p>
-                        <p>{{boisson.prix|prix}}</p>
+                        <p class="plat_nom">{{boisson.nom}}</p>                        
                         <p>{{boisson.quantite}} cl</p>
+                        <p class="desc">{{boisson.description}}</p>
+                        <p>{{boisson.prix|prix}}</p>
                     </div>
                     {% endfor %}           
                 </div>
             </div>
-            <a href="{{ path('contact', {slug: restaurant.slug}) }}" class="btn">{{ 'restaurant.contact'|trans }}</a>
         </div>
     </div>
 {% endblock %}
