--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark">
-            {# <img id="iconHeader" src="/icon.png" alt="logo de l'application"/> #}
+            <img id="iconHeader" src="/icon.png" alt="logo de l'application"/>
             <a class="navbar-brand homeButtonHeader" href="{{ path('home') }}">Popina</a>
             <button class="navbar-toggler" type="butston" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
