--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,10 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
+
+#iconHeader{
+  margin-right: 10px;
+  width: 25px;
+}
 h1{
   text-align: center;
 }
@@ -8,10 +13,12 @@ h2{
   font-style: 20px;
 }
 .btn{
-  background-color: #d5cabc;
+  background-color: #b2dfdb;
+  border: none;
+  color: #426782;
   outline: none;
   &:hover{
-    background-color: #a89d8c;
+    background-color: #80cbc4;
   }
   &::first-letter{
     text-transform: capitalize;
@@ -19,7 +26,7 @@ h2{
 }
 // HEADER
 nav{
-  background-color: #a89d8c;
+  background-color: #80cbc4;
 }
 .navbar-brand:hover{
   color: #426782;
@@ -61,14 +68,6 @@ nav{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px 40px;
-  }
-  &-body{
-    .btn{
-      background-color: #d5cabc;
-      &:hover{
-        background-color: #a89d8c;
-      }
-    }
   }
   &--type{
     position: absolute;
@@ -221,14 +220,9 @@ footer{
     border-bottom: 1px solid #d5cabc;
   }
   .btn{
-    background-color: #d5cabc;
-    color: #426782;
     outline: none;
     &::first-letter{
       text-transform: capitalize;
-    }
-    &:hover{
-      background-color: #a89d8c;
     }
     &--add{
       margin-top: 30px;
