switch lang, trad anglais debut

--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -4,7 +4,7 @@
 
 <div class="home">
     <div class="container">
-    {# {{ form(form) }} #}
+    {# {{ form(trad) }} #}
         <div class="row ">
             
         <div class="row">
