--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,6 +5,11 @@
   margin-right: 10px;
   width: 25px;
 }
+
+.navbar-expand-lg .navbar-nav{
+  margin-right: 0 !important;
+  margin-left: auto;
+}
 h1{
   text-align: center;
 }
